# CrySIL

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README-U2F.md  README.md  build.xml  config  discover_keys_dump.txt  my_config.properties
C/: CMakeLists.txt  Makefile  Makefile_old  pkcs11.c  resolve_macros_for_swig.sh
C/src/: Pkcs11Config.h  jvm.h  pkcs11.c  pkcs11.h  pkcs11f.h  pkcs11t.h
C/test/: Makefile  easytests.cpp  maintest.cpp  plaintest.cpp
JAVA/src/: Cpkcs11Interface.java  FindObjectsHelper.java  JAVApkcs11Interface.java  ObjectStorage.java  PKCS11Error.java  ResourceManager.java  Server.java  ServerSession.java  Session.java  SignHelper.java  Slot.java  Util.java  pkcs11Interface.java
JAVA/src/gui/: Aufstarter.java  Authenticator.java  Credentials.java  DataVaultSingleton.java  MobileSignature.java  Server.java  UserName.java
JAVA/src/objects/: ATTRIBUTE.java  Attribute.java  CertificateObject.java  DataObject.java  EnumBase.java  KeyObject.java  MECHANISM.java  Mechanism.java  MechanismObject.java  ObjectBuilder.java  ObjectManager.java  PKCS11Object.java  PrivateKeyObject.java  PublicKeyObject.java  SecretKeyObject.java  StorageObject.java  StructBase.java  StructSizeBase.java
JAVA/src/pkcs11/: CryptoHelper.java  FindObjectsHelper.java  IServerSession.java  IToken.java  JAVApkcs11Interface.java  MaintenanceThread.java  ObjectStorage.java  PKCS11Error.java  PKCS11SkyTrustMapper.java  ResourceManager.java  ServerSession.java  Session.java  SignHelper.java  Slot.java  Token.java  Util.java
instances/demo/: pom.xml
instances/demo_client/: pom.xml
instances/demo_webservice/: pom.xml
instances/demo_webservice/web/WEB-INF/: web.xml
instances/gridh-desktop/: pom.xml
instances/jce-receiver-demo/: pom.xml
lib/: points
modules/: pom.xml
modules/actors/java/actor-decentral/: pom.xml
modules/actors/java/cloudks-keystore/: pom.xml
modules/actors/java/filekeystore/: pom.xml
modules/actors/java/invertedTrustActor/: pom.xml
modules/actors/java/singlekey-keystore/: pom.xml
modules/actors/java/smcc/: README.md  pom.xml
modules/actors/java/software-crypto/: pom.xml
modules/actors/java/staticKeyEncryption/: pom.xml
modules/actors/java/u2f-android/: README.md  pom.xml
modules/actors/java/u2f-pkcs11/: README.md  pom.xml
modules/actors/java/u2f-spongycastle/: README.md  pom.xml
modules/auth/java/auth-basic/: pom.xml
modules/auth/java/auth-challenge-response/: pom.xml
modules/auth/java/auth-oauth/: pom.xml
modules/auth/java/crysilandroid/: build.gradle  settings.gradle
modules/cms/java/: pom.xml
modules/commons/java/: pom.xml
modules/communications/java/http-json-commons/: pom.xml
modules/communications/java/http-json-receiver/: pom.xml
modules/communications/java/http-json-transmitter/: pom.xml
modules/communications/java/json-commons/: pom.xml
modules/communications/java/u2f-commons/: README.md  pom.xml
modules/communications/java/u2f-http-json-receiver/: README.md  pom.xml
modules/communications/java/u2f-websocket-receiver/: README.md  (+1 more)
modules/gatekeeper-basic-auth-plugins/java/: pom.xml
modules/gatekeeper-with-sessions/: pom.xml
modules/gatekeeper/java/: pom.xml
modules/interceptor-authentication/java/: pom.xml
modules/lib-decentral/java/: pom.xml
modules/lib-gridh-tor/java/: pom.xml
modules/lib-gridh/java/: pom.xml
modules/lib-tor/java/: pom.xml
modules/others/chromium/: 0001-mod-chromium.patch  README.md  background.js  crysiladapter.js  manifest.json  popup.html  test.html
modules/others/windows-cp/: CrySILU2FCredentialProvider.sln  Install.bat  README.md
modules/receiver/jce-receiver/: pom.xml
samples/android/: README.md
samples/android/crysilapp/: .gitignore  README.md  build.gradle
samples/android/instance/: README.md  pom.xml
samples/android/webservice/: README.md  pom.xml
samples/cms-desktop-app/: README.md  README.md.cms  main.css.cms  pom.xml
samples/crysil-server-android/: build.gradle  gradle.properties
samples/crysil-server-android/app/: build.gradle
samples/crysil-server-android/auth-android/: build.gradle
samples/crysil-server-android/server-android/: build.gradle
samples/pkcs11/: CMakeLists.txt  README.md  build.xml  config  ivy.xml  ivysettings.xml
samples/simple-webservice/: pom.xml
samples/u2f/: README.md
samples/u2f/pkcs11-server/: README.md  pom.xml
samples/u2f/server/: README.md  pom.xml
samples/u2f/smcc-server/: README.md  pom.xml
samples/u2f/software-server/: pom.xml
samples/webservice-ibe/: pom.xml
samples/webservice-with-auth-and-keydatabase/: README.md  pom.xml
skytrust-element-java/: .gitignore  pom.xml
skytrust-element-java/actor-apdu/: pom.xml
skytrust-element-java/actor-jce/: pom.xml
skytrust-element-java/actor-smcc/: pom.xml
skytrust-element-java/common/: pom.xml
skytrust-element-java/core/: .gitignore  pom.xml
skytrust-element-java/core/tests/: SMCCTest.java
skytrust-element-java/receiver-http/: pom.xml
skytrust-element-java/test/: pom.xml
src/C/src/: Pkcs11Config.h  jvm.h  pkcs11.c  pkcs11.h
swig/: enums.sh  generateProxys.i  resolve_macros_for_swig.sh
(+911 files in other folders)
